Revert "fix sm spacing issue"
This reverts commit 222616d38862160792ce93ff37e099bbd4270260.

--- a/assets/css/partials/_archive.scss
+++ b/assets/css/partials/_archive.scss
@@ -1,5 +1,4 @@
 .wpfc-sermon {
-  margin-bottom: 24px;
   &:last-child {
     margin-bottom: 0;
   }
